* sources.am, Makefile.in, include/config.h.in, configure: 	Rebuilt. 	* Makefile.am (nat_source_files): Added natConfiguration.cc. 	* gnu/classpath/natConfiguration.cc: New file. 	* configure.ac (AWT_TOOLKIT): New define. 	(LIBGCJ_PREFIX): Likewise. 	* gnu/classpath/Configuration.java: New file. 	* sources.am: Rebuilt. 	* scripts/makemake.tcl: Don't special case Configuration.java.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcj-eclipse@117648 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,15 @@
+2006-10-11  Tom Tromey  <tromey@redhat.com>
+
+	* sources.am, Makefile.in, include/config.h.in, configure:
+	Rebuilt.
+	* Makefile.am (nat_source_files): Added natConfiguration.cc.
+	* gnu/classpath/natConfiguration.cc: New file.
+	* configure.ac (AWT_TOOLKIT): New define.
+	(LIBGCJ_PREFIX): Likewise.
+	* gnu/classpath/Configuration.java: New file.
+	* sources.am: Rebuilt.
+	* scripts/makemake.tcl: Don't special case Configuration.java.
+
 2006-10-10  Tom Tromey  <tromey@redhat.com>
 
 	* gcj/javaprims.h: Updated.
