2006-10-13  Andrew Haley  <aph@redhat.com>
        * java-gimplify.c: Revert last changes.
        * java-tree.h: Likewise.
        * jcf-parse.c: Likewise.
        * parse.y: Likewise.
        * class.c: Likewise.

2006-10-12  Andrew Haley  <aph@redhat.com>

        * java/lang/natThreadLocal.cc: New file.
        * java/lang/ThreadLocal.java: Rewrite to use native TLS.
        * Makefile.am: Add java/lang/natThreadLocal.cc.
        * sources.am: Move classpath/java/lang/ThreadLocal.java to
        java/lang/ThreadLocal.java.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcj@117693 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcj-tls-experimental-branch/gcc/java/ChangeLog
+++ b/gcj-tls-experimental-branch/gcc/java/ChangeLog
@@ -1,3 +1,11 @@
+2006-10-13  Andrew Haley  <aph@redhat.com>
+
+	* java-gimplify.c: Revert last changes.
+	* java-tree.h: Likewise.
+	* jcf-parse.c: Likewise.
+	* parse.y: Likewise.
+	* class.c: Likewise.
+
 2006-09-01  Andrew Haley  <aph@redhat.com>
 
 	* class.c (find_tls_thunk): New function.
