--- a/gcj-tls-experimental-branch/libjava/ChangeLog
+++ b/gcj-tls-experimental-branch/libjava/ChangeLog
@@ -1,3 +1,11 @@
+2006-10-12  Andrew Haley  <aph@redhat.com>
+
+	* java/lang/natThreadLocal.cc: New file.
+	* java/lang/ThreadLocal.java: Rewrite to use native TLS.
+	* Makefile.am: Add java/lang/natThreadLocal.cc.
+	* sources.am: Move classpath/java/lang/ThreadLocal.java to
+	java/lang/ThreadLocal.java.
+
 2006-09-01  Andrew Haley  <aph@redhat.com>
 
 	* Makefile.in: Rebuild.
