--- a/libjava/classpath/ChangeLog
+++ b/libjava/classpath/ChangeLog
@@ -1,3 +1,8 @@
+2006-10-12  Andrew Haley  <aph@redhat.com>
+
+        * java/lang/InheritableThreadLocal.java: Rename NULL to sentinel.
+        * java/lang/ThreadLocal.java: Likewise.
+
 2006-09-13  Andrew Haley  <aph@redhat.com>
 
 	* external/jsr166/java/util/concurrent/atomic/AtomicIntegerFieldUpdater.java:
