--- a/gcc-4_1-branch/gcc/config/rs6000/rs6000.md
+++ b/gcc-4_1-branch/gcc/config/rs6000/rs6000.md
@@ -13665,6 +13665,114 @@
 }"
   [(set_attr "type" "load")])
 
+;; Decimal float patterns.
+
+(define_insn "movdd"
+  [(set (match_operand:DD 0 "nonimmediate_operand" "=f,f,m,r,r,m")
+        (match_operand:DD 1 "input_operand" "f,m,f,r,m,r"))]
+  "ENABLE_DECIMAL_FLOAT && TARGET_HARD_FLOAT && TARGET_FPRS"
+  "*
+{
+  switch (which_alternative)
+  {
+    case 0:
+      return \"fmr %0,%1\";
+    case 1:
+      return \"lfd%U1%X1 %0,%1\";
+    case 2:
+      return \"stfd%U0%X0 %1,%0\";
+    case 3:
+      if (TARGET_64BIT)
+	return \"mr %0,%1\";
+      
+      /* We normally copy the low-numbered register first.  However, if
+	 the first register operand 0 is the same as the second register
+	 of operand 1, we must copy in the opposite order.  */
+      if (REGNO (operands[0]) == REGNO (operands[1]) + 1)
+	return \"mr %L0,%L1\;mr %0,%1\";
+      else
+	return \"mr %0,%1\;mr %L0,%L1\";
+    case 4:
+      if (TARGET_64BIT)
+	return \"ld%U1%X1 %0,%1\";
+
+      if (rs6000_offsettable_memref_p (operands[1])
+	  || (GET_CODE (operands[1]) == MEM
+	      && (GET_CODE (XEXP (operands[1], 0)) == LO_SUM
+		  || GET_CODE (XEXP (operands[1], 0)) == PRE_INC
+		  || GET_CODE (XEXP (operands[1], 0)) == PRE_DEC)))
+	{
+	  /* If the low-address word is used in the address, we must load
+	     it last.  Otherwise, load it first.  Note that we cannot have
+	     auto-increment in that case since the address register is
+	     known to be dead.  */
+	  if (refers_to_regno_p (REGNO (operands[0]), REGNO (operands[0]) + 1,
+				 operands[1], 0))
+	    return \"{l|lwz} %L0,%L1\;{l|lwz} %0,%1\";
+	  else
+	    return \"{l%U1|lwz%U1} %0,%1\;{l|lwz} %L0,%L1\";
+	}
+      else
+	{
+	  rtx addreg;
+	  
+	  addreg = find_addr_reg (XEXP (operands[1], 0));
+	  if (refers_to_regno_p (REGNO (operands[0]),
+				 REGNO (operands[0]) + 1,
+				 operands[1], 0))
+	    {
+	      output_asm_insn (\"{cal|la} %0,4(%0)\", &addreg);
+	      output_asm_insn (\"{lx|lwzx} %L0,%1\", operands);
+	      output_asm_insn (\"{cal|la} %0,-4(%0)\", &addreg);
+	      return \"{lx|lwzx} %0,%1\";
+	    }
+	  else
+	    {
+	      output_asm_insn (\"{lx|lwzx} %0,%1\", operands);
+	      output_asm_insn (\"{cal|la} %0,4(%0)\", &addreg);
+	      output_asm_insn (\"{lx|lwzx} %L0,%1\", operands);
+	      output_asm_insn (\"{cal|la} %0,-4(%0)\", &addreg);
+	      return \"\";
+	    }
+	}
+    case 5:
+      if (TARGET_64BIT)
+	return \"std%U0%X0 %1,%0\";
+      
+      if (rs6000_offsettable_memref_p (operands[0])
+	  || (GET_CODE (operands[0]) == MEM
+	      && (GET_CODE (XEXP (operands[0], 0)) == LO_SUM
+		  || GET_CODE (XEXP (operands[0], 0)) == PRE_INC
+		  || GET_CODE (XEXP (operands[0], 0)) == PRE_DEC)))
+	return \"{st%U0|stw%U0} %1,%0\;{st|stw} %L1,%L0\";
+      else
+	{
+	  rtx addreg;
+	  
+	  addreg = find_addr_reg (XEXP (operands[0], 0));
+	  output_asm_insn (\"{stx|stwx} %1,%0\", operands);
+	  output_asm_insn (\"{cal|la} %0,4(%0)\", &addreg);
+	  output_asm_insn (\"{stx|stwx} %L1,%0\", operands);
+	  output_asm_insn (\"{cal|la} %0,-4(%0)\", &addreg);
+	  return \"\";
+	}
+    default:
+      gcc_unreachable ();
+  }
+}"
+  [(set_attr "type" "fp,fpload,fpstore,*,load,store")
+   (set_attr "length" "4,4,4,8,16,16")])
+
+(define_insn_and_split "movtd"
+   [(set (match_operand:TD 0 "nonimmediate_operand" "=m,f,f,m,r,r")
+ 	(match_operand:TD 1 "input_operand"         "f,m,f,r,m,r"))]
+   "ENABLE_DECIMAL_FLOAT && TARGET_HARD_FLOAT && TARGET_FPRS"
+   "#"
+   "&& reload_completed"
+   [(pc)]
+   { rs6000_split_multireg_move (operands[0], operands[1]); DONE; }
+   [(set_attr "length" "8,8,8,16,16,16")])
+
 
 (include "sync.md")
 (include "altivec.md")
