libjava 	* configure, Makefile.in: Rebuilt. 	* Makefile.am (install-exec-hook): Now unconditional.  Rename ecjx 	if needed. 	(jar_DATA): Add ecj jar when needed. 	(toolexec_PROGRAMS): New variable. 	(ecjx_SOURCES, ecjx_LDFLAGS, ecjx_LDADD, ecjx_DEPENDENCIES): 	Likewise. 	* prims.cc (JvRunMainName): New function. 	* include/jvm.h (JvRunMainName): Declare. 	* configure.ac: Added --with-ecj-jar. 	(ECJ_JAR): New subst. 	(ECJ_BUILD_JAR): Likewise. 	(INSTALL_ECJ_JAR): New conditional. 	(BUILD_ECJ1): Likewise. gcc/java 	* jvgenmain.c (main): Handle -findirect-dispatch. 	* jvspec.c (jvgenmain_spec): Pass -findirect-dispatch to 	jvgenmain. contrib 	* download_ecj: New file.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcj-eclipse@117829 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-17  Tom Tromey  <tromey@redhat.com>
+
+	* download_ecj: New file.
+
 2006-06-02  Richard Earnshaw  <rearnsha@arm.com>
 	    Mike Stump  <mrs@apple.com>
 
