libjava 	* java/lang/natClass.cc (parseAnnotationElement): Expect a utf8 	constant in the "string" case. 	* defineclass.cc (handleAnnotationElement): Expect a utf8 constant 	in the "string" case. gcc/java 	* jcf-dump.c (print_element_value): Expect a utf8 constant in the 	"string" case.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcj-eclipse@117830 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,5 +1,10 @@
 2006-10-17  Tom Tromey  <tromey@redhat.com>
 
+	* jcf-dump.c (print_element_value): Expect a utf8 constant in the
+	"string" case.
+
+2006-10-17  Tom Tromey  <tromey@redhat.com>
+
 	* jvgenmain.c (main): Handle -findirect-dispatch.
 	* jvspec.c (jvgenmain_spec): Pass -findirect-dispatch to
 	jvgenmain.
