* gcc.dg/dfp/dfp-bug-001.c: New. 	* gcc.dg/dfp/dfp-bug-002.c: New. 	* gcc.dg/dfp/dfp-bug-003.c: New. 	* gcc.dg/dfp/dfp-bug-004.c: New. 	* gcc.dg/dfp/dfp-bug-005.c: New.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/ibm@117860 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2006-10-18  Janis Johnson  <janis187@us.ibm.com>
+
+	* gcc.dg/dfp/dfp-bug-001.c: New.
+	* gcc.dg/dfp/dfp-bug-002.c: New.
+	* gcc.dg/dfp/dfp-bug-003.c: New.
+	* gcc.dg/dfp/dfp-bug-004.c: New.
+	* gcc.dg/dfp/dfp-bug-005.c: New.
+
 2006-10-08  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* gcc.dg/builtins-config.h: Ensure we use -std=c99 on solaris2.
