--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2006-10-18  Tom Tromey  <tromey@redhat.com>
+
+	PR java/28938:
+	* doc/install.texi (Prerequisites): Mention ecj1.
+	(Configuration): Move --with-java-home to libgcj-specific
+	section.  Document --with-ecj-jar.
+
 2006-07-13  Andrew Haley  <aph@redhat.com>
 
         PR tree-optimization/19505
