gcc/ 	* config/m68k/m68k.md (link, unlink): New.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/csl@117909 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/sourcerygxx-4_1/gcc/config/m68k/m68k.md
+++ b/sourcerygxx-4_1/gcc/config/m68k/m68k.md
@@ -6483,6 +6483,33 @@
   return "rtd %0";
 })
 
+(define_insn "link"
+  [(set (match_operand:SI 0 "register_operand" "+r")
+        (plus:SI (reg:SI SP_REG) (const_int -4)))
+   (set (mem:SI (plus:SI (reg:SI SP_REG) (const_int -4)))
+        (match_dup 0))
+   (set (reg:SI SP_REG)
+        (plus:SI (reg:SI SP_REG)
+                 (match_operand:SI 1 "const_int_operand" "n")))]
+  "m68k_arch_68020 || INTVAL (operands[1]) >= -0x8004"
+{
+  operands[1] = GEN_INT (INTVAL (operands[1]) + 4);
+  if (!MOTOROLA)
+    return "link %0,%1";
+  else if (INTVAL (operands[1]) >= -0x8000)
+    return "link.w %0,%1";
+  else
+    return "link.l %0,%1";
+})
+
+(define_insn "unlink"
+  [(set (reg:SI SP_REG)
+	(plus:SI (match_operand:SI 0 "register_operand" "=r") (const_int 4)))
+   (set (match_dup 0)
+	(mem:SI (match_dup 0)))]
+  ""
+  "unlk %0")
+
 (define_insn "load_got"
   [(set (reg:SI PIC_REG)
 	(unspec:SI [(const_int 0)] UNSPEC_GOT))]
