* testsuite/libjava.lang/PR260.out: Rewrote for 1.5. 	* testsuite/libjava.lang/pr179.out: Rewrote for 1.5. 	* testsuite/libjava.lang/pr179.java: Updated comments. 	* testsuite/libjava.compile/inner_1.xfail: Removed.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcj-eclipse@117940 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2006-10-21  Tom Tromey  <tromey@redhat.com>
+
+	* testsuite/libjava.lang/PR260.out: Rewrote for 1.5.
+	* testsuite/libjava.lang/pr179.out: Rewrote for 1.5.
+	* testsuite/libjava.lang/pr179.java: Updated comments.
+	* testsuite/libjava.compile/inner_1.xfail: Removed.
+
 2006-10-20  Tom Tromey  <tromey@redhat.com>
 
 	* testsuite/libjava.cni/cni.exp (gcj_cni_build_headers): Don't use
