--- a/gcc-4_1-branch/gcc/ChangeLog
+++ b/gcc-4_1-branch/gcc/ChangeLog
@@ -1,3 +1,152 @@
+2006-10-25  Paolo Bonzini  <bonzini@gnu.org>
+
+	PR c/29092
+
+        * c-typeck.c (digest_init): Always allow initializing vectors
+	that have static storage duration with compound literals.
+	* tree.c (build_type_attribute_qual_variant): New, based on
+	build_type_attribute_variant.
+	(build_type_attribute_variant): Rewrite using the former.
+	(make_vector_type): Use build_type_attribute_qual_variant to build
+	type variants.  Use type_hash_canon on the others.
+
+2006-10-23  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* config/s390/predicates.md ("bras_sym_operand"): Do not accept
+	nonlocal function symbols if flag_pic.
+
+2006-10-19  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* fold-const.c (add_double): Rename to add_double_with_sign.
+	Add 'unsigned_p' parameter and take it into account for the overflow.
+	(mul_double): Rename to mul_double_with_sign. 
+	Add 'unsigned_p' parameter and take it into account for the overflow.
+	(fold_div_compare): Call add_double_with_sign instead of add_double
+	and mul_double_with_sign instead of mul_double, passing them the
+	unsignedness of the type.
+	* tree.h (add_double): Macroize.
+	(add_double_with_sign): New prototype.
+	(mul_double): Macroize.
+	(mul_double_with_sign): New prototype.
+
+2006-10-19 Ira Rosen  <irar@il.ibm.com>
+
+        Backport from mainline:
+        2006-08-07  Victor Kaplansky <victork@il.ibm.com>
+
+        PR tree-optimization/26969
+        * tree-vect-analyze.c (vect_analyze_loop_form): Add check of latch
+        with an empty list of PHIs.
+
+2006-10-18  Richard Guenther  <rguenther@suse.de>
+
+	Backport from mainline:
+	2006-08-16  Zdenek Dvorak <dvorakz@suse.cz>
+
+	PR gcov/profile/26570
+	* value-prof.c (static_values): Removed.
+	(tree_find_values_to_profile): Do not set static_values.
+	(find_values_to_profile): Do not free static_values.
+	* profile.c (instrument_values): Do not free the values.
+	(branch_prob): Free the values.
+
+2006-10-18  Richard Guenther  <rguenther@suse.de>
+
+	Backport from mainline:
+	2006-05-11  Jan Hubicka  <jh@suse.cz>
+
+	PR debug/26881
+	* Makefile.in (gt-cgraphunit.h): Add.
+	* cgraphunit.c: Include gt-cgraphunit.h.
+	(local_static_output): New static vector.
+	(cgraph_varpool_assemble_decl): Defer outputting debug info
+	for local statics to...
+	(cgraph_varpool_debug_local_statics): ... here.
+	(cgraph_optimize): Use it.
+
+2006-10-18  Richard Guenther  <rguenther@suse.de>
+
+	* except.c (set_nothrow_function_flags): Fix return value.
+
+2006-10-17  Paul Brook  <paul@codesourcery.com>
+
+	Backport from mainline:
+	* config/arm/arm.c (arm_rtx_costs_1): Handle multiply-accumulate.
+
+2006-10-16  Richard Guenther  <rguenther@suse.de>
+
+	PR target/28960
+	Backport from mainline:
+	2006-08-23  Stuart Hastings  <stuart@apple.com>
+
+	PR target/28825
+	* gcc/config/i386/i386.c (ix86_expand_vector_init_duplicate,
+	ix86_expand_vector_init_one_nonzero): Remove TARGET_SSE test.
+
+2006-10-16  Richard Guenther  <rguenther@suse.de>
+
+	Backport from mainline:
+	2006-10-10  Richard Guenther  <rguenther@suse.de>
+
+	PR inline-asm/29119
+	* gimplify.c (gimplify_asm_expr): Mark the gimplified lvalue
+	addressable.
+
+2006-10-16  Richard Guenther  <rguenther@suse.de>
+
+	Backport from mainline:
+	2006-08-13  Alexandre Oliva  <aoliva@redhat.com>
+		    Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR c/27184
+	* tree.c (build_array_type): Unify array types with
+	unspecified index_type.
+	* c-decl.c (grokdeclarator): Make sure we do not modify a
+	unified incomplete array type.
+	* c-typeck.c (store_init_value): Create distinct type before
+	filling in the index type in an initializer from a compound
+	literal.
+
+	* c-decl.c (grokdeclarator): Remove code where we copy the
+	array type over.
+
+2006-10-16  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/29091
+	* varasm.c (output_constant): If TREE_VECTOR_CST_ELTS chain is shorter than
+	the number of vector elements fill the rest with zeros.
+
+2006-10-16  Richard Guenther  <rguenther@suse.de>
+
+	PR target/25519
+	* doc/extend.texi (X86 Built-in Functions): Fix typos in
+	SSE builtin documentation.  Document SSE2 builtins.
+
+2006-10-15  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	* pa64-hpux.h (LINK_SPEC): Force __cxa_finalize to be an undefined
+	symbol in the output file for non-shared links when -nostdlib or
+	-nodefaultlibs isn't specified.
+
+	* config.gcc (hppa*64*-*-hpux11*, hppa[12]*-*-hpux11*): Default to
+	posix thread support.
+
+2006-10-14  Richard Guenther  <rguenther@suse.de>
+
+	PR rtl-optimization/29323
+	* except.c (set_nothrow_function_flags): For functions
+	that do not bind local bail out early.
+
+2006-10-14  Uros Bizjak  <uros@kss-loka.si>
+
+	* config/i386/athlon.md (athlon_fist): Add fisttp.
+
+2006-10-12  Jie Zhang  <jie.zhang@analog.com>
+
+	* config/bfin/bfin.md (eh_return): Call emit_jump_insn instead of
+	emit_insn to emit eh_return_internal instruction.
+	(eh_return_internal): Explicitly set pc.
+
 2006-10-06  Steve Ellcey  <sje@cup.hp.com>
 
 	PR target/28490
