--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2006-11-01  Andrew Haley  <aph@redhat.com>
+
+	* java/lang/natClass.cc (parseAnnotationElement): Set result from
+	anno_class.
+
 2006-10-21  Tom Tromey  <tromey@redhat.com>
 
 	* testsuite/libjava.lang/PR260.out: Rewrote for 1.5.
